Add the Score logic of the game with localStorage and display strikes as visual help for the user. Add the gameOver function that terminate the game when applicable and update the starting game parameters so strikes dont show when starting a new game.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1124,7 +1124,8 @@ a {
     left: 0;
     height: 100px;
     width: 80%;
-    margin: 5px auto;
+    margin: 10px auto;
+    padding: 20px;
     background-color: #fcfcfc;
 }
 
@@ -1141,7 +1142,9 @@ a {
     line-height: 36px;
 }
 
-.control-buttons:focus,
+.control-buttons:focus {
+    outline: none;
+}
 .control-buttons:hover {
     color: #d9cb11;
     background-color: black;
@@ -1155,6 +1158,7 @@ a {
     transform: translate(-50%, -50%);
 }
 
+/* Position the buttons */
 .button-up {transform: translate(-50%, -125%);}
 
 .button-left {transform: translate(-125%, -50%);}
@@ -1163,8 +1167,25 @@ a {
 
 .button-down {transform: translate(-50%, 25%);}
 
-/* Game display */
+/* Strikes Display */
+.strikes-area {
+    position: absolute;
+    top: 0;
+    left: 10px;
+    height: 50px;
+    width: 80px;
+    background-color: transparent;
+}
 
+.strike-one,
+.strike-two {
+    display: inline-block;
+    font-size: 25px;
+    margin-right: 10px;
+    color: #d91e2e;
+}
+
+/* Game display */
 .game-display {
     position: relative;
     height: 40px;
