--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ a {
 .question-modal {
     border-radius: 5px;
     height: 60%;
-    width: 70%;
+    width: 85%;
 }
 
 .results-modal {
@@ -1218,7 +1218,7 @@ a {
 
 .answer-display {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
 }
 
 #question-form p {
@@ -1237,6 +1237,7 @@ a {
     left: 45px;
     transform: translate(0, -50%);
     font-size: 0.8rem;
+    padding: 1em 1em 1em 0;
 }
 
 #question-form button {
